@@ -4,6 +4,9 @@
 	avoid use of uninitialized data. Fixes oss-fuzz 6597
 	"graphicsmagick/coder_VIFF_fuzzer: Use-of-uninitialized-value in
 	ThresholdImage". (Credit to OSS-Fuzz)
+	(ReadVIFFImage): Don't execute SetImageType(image,BilevelType) on
+	an image which has no pixels yet in order to avoid use of
+	uninitialized data. Fixes oss-fuzz 6597.  (Credit to OSS-Fuzz)
 
 	* coders/wbmp.c (ReadWBMPImage): Fix blob I/O size validation to
 	avoid use of uninitialized data. Fixes oss-fuzz 7047
